[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/TwitchAddon/API/Requests/TokenValidator.gd" type="Script" id=1]
[ext_resource path="res://addons/TwitchAddon/interface/ResponseTable.gd" type="Script" id=2]
[ext_resource path="res://addons/TwitchAddon/interface/MainPanel.gd" type="Script" id=3]
[ext_resource path="res://addons/TwitchAddon/interface/TokenStatusHBoxContainer.gd" type="Script" id=4]
[ext_resource path="res://addons/TwitchAddon/API/API.gd" type="Script" id=5]
[ext_resource path="res://addons/TwitchAddon/API/Requests/RevokeAuthToken.gd" type="Script" id=6]
[ext_resource path="res://addons/TwitchAddon/API/Requests/GetAppAccessToken.gd" type="Script" id=7]
[ext_resource path="res://addons/TwitchAddon/interface/ScopeSecretHBoxContainer.gd" type="Script" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="API" type="Node" parent="."]
script = ExtResource( 5 )

[node name="TokenValidator" type="Node" parent="API"]
script = ExtResource( 1 )

[node name="RevokeAuthToken" type="Node" parent="API"]
script = ExtResource( 6 )

[node name="GetAppAccessToken" type="Node" parent="API"]
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="TokenStatusHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
alignment = 1
script = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TokenStatusHBoxContainer"]
margin_left = 414.0
margin_right = 555.0
margin_bottom = 14.0
text = "App Token Expires in: "

[node name="ExpiresLabel" type="Label" parent="MarginContainer/VBoxContainer/TokenStatusHBoxContainer"]
margin_left = 559.0
margin_right = 569.0
margin_bottom = 14.0
text = "--"

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/TokenStatusHBoxContainer"]
wait_time = 5.13027e+06
one_shot = true

[node name="ClientIdHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 984.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ClientIdHBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Client ID"

[node name="ClientIdField" type="LineEdit" parent="MarginContainer/VBoxContainer/ClientIdHBoxContainer"]
margin_left = 104.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "mxsahzhlk3q9lfqum0lnlioezqggfo"

[node name="ClientSecretHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 984.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ClientSecretHBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Client Secret"

[node name="ClientSecretField" type="LineEdit" parent="MarginContainer/VBoxContainer/ClientSecretHBoxContainer"]
margin_left = 104.0
margin_right = 935.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "sinhqccw6l6d4iwqmfu2mkyrkjho20"
secret = true

[node name="ShowSecretButton" type="Button" parent="MarginContainer/VBoxContainer/ClientSecretHBoxContainer"]
margin_left = 939.0
margin_right = 984.0
margin_bottom = 24.0
toggle_mode = true
text = "show"

[node name="ScopeSecretHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 984.0
margin_bottom = 98.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScopeSecretHBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Scope"

[node name="ScopeField" type="LineEdit" parent="MarginContainer/VBoxContainer/ScopeSecretHBoxContainer"]
margin_left = 104.0
margin_right = 880.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "set scope with menu select"

[node name="PopupMenu" type="PopupMenu" parent="MarginContainer/VBoxContainer/ScopeSecretHBoxContainer"]
margin_left = 745.0
margin_right = 880.0
margin_bottom = 70.0
items = [ "scope.viewshit", null, 2, false, false, 0, 0, null, "", false, "scope.viewshit", null, 2, false, false, 1, 0, null, "", false, "scope.viewshit", null, 1, true, false, 2, 0, null, "", false ]
hide_on_item_selection = false
hide_on_checkable_item_selection = false

[node name="MenuButton" type="MenuButton" parent="MarginContainer/VBoxContainer/ScopeSecretHBoxContainer"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 24.0
text = "select scopes"
flat = false
items = [ "analytics:read:extensions", null, 1, false, false, 0, 0, null, "", false, "analytics:read:games", null, 1, false, false, 1, 0, null, "", false, "bits:read", null, 1, false, false, 2, 0, null, "", false, "channel:edit:commercial", null, 1, false, false, 3, 0, null, "", false, "channel:manage:broadcast", null, 1, false, false, 4, 0, null, "", false, "channel:manage:extensions", null, 1, false, false, 5, 0, null, "", false, "channel:manage:polls", null, 1, false, false, 6, 0, null, "", false, "channel:manage:predictions", null, 1, false, false, 7, 0, null, "", false, "channel:manage:redemptions", null, 1, false, false, 8, 0, null, "", false, "channel:manage:schedule", null, 1, false, false, 9, 0, null, "", false, "channel:manage:videos", null, 1, false, false, 10, 0, null, "", false, "channel:read:editors", null, 1, false, false, 11, 0, null, "", false, "channel:read:goals", null, 1, false, false, 12, 0, null, "", false, "channel:read:hype_train", null, 1, false, false, 13, 0, null, "", false, "channel:read:polls", null, 1, false, false, 14, 0, null, "", false, "channel:read:predictions", null, 1, false, false, 15, 0, null, "", false, "channel:read:redemptions", null, 1, false, false, 16, 0, null, "", false, "channel:read:stream_key", null, 1, false, false, 17, 0, null, "", false, "channel:read:subscriptions", null, 1, false, false, 18, 0, null, "", false, "clips:edit", null, 1, false, false, 19, 0, null, "", false, "moderation:read", null, 1, false, false, 20, 0, null, "", false, "moderator:manage:banned_users", null, 1, false, false, 21, 0, null, "", false, "moderator:read:blocked_terms", null, 1, false, false, 22, 0, null, "", false, "moderator:manage:blocked_terms", null, 1, false, false, 23, 0, null, "", false, "moderator:manage:automod", null, 1, false, false, 24, 0, null, "", false, "moderator:read:automod_settings", null, 1, false, false, 25, 0, null, "", false, "moderator:manage:automod_settings", null, 1, false, false, 26, 0, null, "", false, "moderator:read:chat_settings", null, 1, false, false, 27, 0, null, "", false, "moderator:manage:chat_settings", null, 1, false, false, 28, 0, null, "", false, "user:edit", null, 1, false, false, 29, 0, null, "", false, "user:edit:follows", null, 1, false, false, 30, 0, null, "", false, "user:manage:blocked_users", null, 1, false, false, 31, 0, null, "", false, "user:read:blocked_users", null, 1, false, false, 32, 0, null, "", false, "user:read:broadcast", null, 1, false, false, 33, 0, null, "", false, "user:read:email", null, 1, false, false, 34, 0, null, "", false, "user:read:follows", null, 1, false, false, 35, 0, null, "", false, "user:read:subscriptions", null, 1, false, false, 36, 0, null, "", false, "analytics:read:extensions", null, 1, false, false, 0, 0, null, "", false, "analytics:read:games", null, 1, false, false, 1, 0, null, "", false, "bits:read", null, 1, false, false, 2, 0, null, "", false, "channel:edit:commercial", null, 1, false, false, 3, 0, null, "", false, "channel:manage:broadcast", null, 1, false, false, 4, 0, null, "", false, "channel:manage:extensions", null, 1, false, false, 5, 0, null, "", false, "channel:manage:polls", null, 1, false, false, 6, 0, null, "", false, "channel:manage:predictions", null, 1, false, false, 7, 0, null, "", false, "channel:manage:redemptions", null, 1, false, false, 8, 0, null, "", false, "channel:manage:schedule", null, 1, false, false, 9, 0, null, "", false, "channel:manage:videos", null, 1, false, false, 10, 0, null, "", false, "channel:read:editors", null, 1, false, false, 11, 0, null, "", false, "channel:read:goals", null, 1, false, false, 12, 0, null, "", false, "channel:read:hype_train", null, 1, false, false, 13, 0, null, "", false, "channel:read:polls", null, 1, false, false, 14, 0, null, "", false, "channel:read:predictions", null, 1, false, false, 15, 0, null, "", false, "channel:read:redemptions", null, 1, false, false, 16, 0, null, "", false, "channel:read:stream_key", null, 1, false, false, 17, 0, null, "", false, "channel:read:subscriptions", null, 1, false, false, 18, 0, null, "", false, "clips:edit", null, 1, false, false, 19, 0, null, "", false, "moderation:read", null, 1, false, false, 20, 0, null, "", false, "moderator:manage:banned_users", null, 1, false, false, 21, 0, null, "", false, "moderator:read:blocked_terms", null, 1, false, false, 22, 0, null, "", false, "moderator:manage:blocked_terms", null, 1, false, false, 23, 0, null, "", false, "moderator:manage:automod", null, 1, false, false, 24, 0, null, "", false, "moderator:read:automod_settings", null, 1, false, false, 25, 0, null, "", false, "moderator:manage:automod_settings", null, 1, false, false, 26, 0, null, "", false, "moderator:read:chat_settings", null, 1, false, false, 27, 0, null, "", false, "moderator:manage:chat_settings", null, 1, false, false, 28, 0, null, "", false, "user:edit", null, 1, false, false, 29, 0, null, "", false, "user:edit:follows", null, 1, false, false, 30, 0, null, "", false, "user:manage:blocked_users", null, 1, false, false, 31, 0, null, "", false, "user:read:blocked_users", null, 1, false, false, 32, 0, null, "", false, "user:read:broadcast", null, 1, false, false, 33, 0, null, "", false, "user:read:email", null, 1, false, false, 34, 0, null, "", false, "user:read:follows", null, 1, false, false, 35, 0, null, "", false, "user:read:subscriptions", null, 1, false, false, 36, 0, null, "", false, "analytics:read:extensions", null, 1, false, false, 0, 0, null, "", false, "analytics:read:games", null, 1, false, false, 1, 0, null, "", false, "bits:read", null, 1, false, false, 2, 0, null, "", false, "channel:edit:commercial", null, 1, false, false, 3, 0, null, "", false, "channel:manage:broadcast", null, 1, false, false, 4, 0, null, "", false, "channel:manage:extensions", null, 1, false, false, 5, 0, null, "", false, "channel:manage:polls", null, 1, false, false, 6, 0, null, "", false, "channel:manage:predictions", null, 1, false, false, 7, 0, null, "", false, "channel:manage:redemptions", null, 1, false, false, 8, 0, null, "", false, "channel:manage:schedule", null, 1, false, false, 9, 0, null, "", false, "channel:manage:videos", null, 1, false, false, 10, 0, null, "", false, "channel:read:editors", null, 1, false, false, 11, 0, null, "", false, "channel:read:goals", null, 1, false, false, 12, 0, null, "", false, "channel:read:hype_train", null, 1, false, false, 13, 0, null, "", false, "channel:read:polls", null, 1, false, false, 14, 0, null, "", false, "channel:read:predictions", null, 1, false, false, 15, 0, null, "", false, "channel:read:redemptions", null, 1, false, false, 16, 0, null, "", false, "channel:read:stream_key", null, 1, false, false, 17, 0, null, "", false, "channel:read:subscriptions", null, 1, false, false, 18, 0, null, "", false, "clips:edit", null, 1, false, false, 19, 0, null, "", false, "moderation:read", null, 1, false, false, 20, 0, null, "", false, "moderator:manage:banned_users", null, 1, false, false, 21, 0, null, "", false, "moderator:read:blocked_terms", null, 1, false, false, 22, 0, null, "", false, "moderator:manage:blocked_terms", null, 1, false, false, 23, 0, null, "", false, "moderator:manage:automod", null, 1, false, false, 24, 0, null, "", false, "moderator:read:automod_settings", null, 1, false, false, 25, 0, null, "", false, "moderator:manage:automod_settings", null, 1, false, false, 26, 0, null, "", false, "moderator:read:chat_settings", null, 1, false, false, 27, 0, null, "", false, "moderator:manage:chat_settings", null, 1, false, false, 28, 0, null, "", false, "user:edit", null, 1, false, false, 29, 0, null, "", false, "user:edit:follows", null, 1, false, false, 30, 0, null, "", false, "user:manage:blocked_users", null, 1, false, false, 31, 0, null, "", false, "user:read:blocked_users", null, 1, false, false, 32, 0, null, "", false, "user:read:broadcast", null, 1, false, false, 33, 0, null, "", false, "user:read:email", null, 1, false, false, 34, 0, null, "", false, "user:read:follows", null, 1, false, false, 35, 0, null, "", false, "user:read:subscriptions", null, 1, false, false, 36, 0, null, "", false, "analytics:read:extensions", null, 1, false, false, 0, 0, null, "", false, "analytics:read:games", null, 1, false, false, 1, 0, null, "", false, "bits:read", null, 1, false, false, 2, 0, null, "", false, "channel:edit:commercial", null, 1, false, false, 3, 0, null, "", false, "channel:manage:broadcast", null, 1, false, false, 4, 0, null, "", false, "channel:manage:extensions", null, 1, false, false, 5, 0, null, "", false, "channel:manage:polls", null, 1, false, false, 6, 0, null, "", false, "channel:manage:predictions", null, 1, false, false, 7, 0, null, "", false, "channel:manage:redemptions", null, 1, false, false, 8, 0, null, "", false, "channel:manage:schedule", null, 1, false, false, 9, 0, null, "", false, "channel:manage:videos", null, 1, false, false, 10, 0, null, "", false, "channel:read:editors", null, 1, false, false, 11, 0, null, "", false, "channel:read:goals", null, 1, false, false, 12, 0, null, "", false, "channel:read:hype_train", null, 1, false, false, 13, 0, null, "", false, "channel:read:polls", null, 1, false, false, 14, 0, null, "", false, "channel:read:predictions", null, 1, false, false, 15, 0, null, "", false, "channel:read:redemptions", null, 1, false, false, 16, 0, null, "", false, "channel:read:stream_key", null, 1, false, false, 17, 0, null, "", false, "channel:read:subscriptions", null, 1, false, false, 18, 0, null, "", false, "clips:edit", null, 1, false, false, 19, 0, null, "", false, "moderation:read", null, 1, false, false, 20, 0, null, "", false, "moderator:manage:banned_users", null, 1, false, false, 21, 0, null, "", false, "moderator:read:blocked_terms", null, 1, false, false, 22, 0, null, "", false, "moderator:manage:blocked_terms", null, 1, false, false, 23, 0, null, "", false, "moderator:manage:automod", null, 1, false, false, 24, 0, null, "", false, "moderator:read:automod_settings", null, 1, false, false, 25, 0, null, "", false, "moderator:manage:automod_settings", null, 1, false, false, 26, 0, null, "", false, "moderator:read:chat_settings", null, 1, false, false, 27, 0, null, "", false, "moderator:manage:chat_settings", null, 1, false, false, 28, 0, null, "", false, "user:edit", null, 1, false, false, 29, 0, null, "", false, "user:edit:follows", null, 1, false, false, 30, 0, null, "", false, "user:manage:blocked_users", null, 1, false, false, 31, 0, null, "", false, "user:read:blocked_users", null, 1, false, false, 32, 0, null, "", false, "user:read:broadcast", null, 1, false, false, 33, 0, null, "", false, "user:read:email", null, 1, false, false, 34, 0, null, "", false, "user:read:follows", null, 1, false, false, 35, 0, null, "", false, "user:read:subscriptions", null, 1, false, false, 36, 0, null, "", false, "analytics:read:extensions", null, 1, false, false, 0, 0, null, "", false, "analytics:read:games", null, 1, false, false, 1, 0, null, "", false, "bits:read", null, 1, false, false, 2, 0, null, "", false, "channel:edit:commercial", null, 1, false, false, 3, 0, null, "", false, "channel:manage:broadcast", null, 1, false, false, 4, 0, null, "", false, "channel:manage:extensions", null, 1, false, false, 5, 0, null, "", false, "channel:manage:polls", null, 1, false, false, 6, 0, null, "", false, "channel:manage:predictions", null, 1, false, false, 7, 0, null, "", false, "channel:manage:redemptions", null, 1, false, false, 8, 0, null, "", false, "channel:manage:schedule", null, 1, false, false, 9, 0, null, "", false, "channel:manage:videos", null, 1, false, false, 10, 0, null, "", false, "channel:read:editors", null, 1, false, false, 11, 0, null, "", false, "channel:read:goals", null, 1, false, false, 12, 0, null, "", false, "channel:read:hype_train", null, 1, false, false, 13, 0, null, "", false, "channel:read:polls", null, 1, false, false, 14, 0, null, "", false, "channel:read:predictions", null, 1, false, false, 15, 0, null, "", false, "channel:read:redemptions", null, 1, false, false, 16, 0, null, "", false, "channel:read:stream_key", null, 1, false, false, 17, 0, null, "", false, "channel:read:subscriptions", null, 1, false, false, 18, 0, null, "", false, "clips:edit", null, 1, false, false, 19, 0, null, "", false, "moderation:read", null, 1, false, false, 20, 0, null, "", false, "moderator:manage:banned_users", null, 1, false, false, 21, 0, null, "", false, "moderator:read:blocked_terms", null, 1, false, false, 22, 0, null, "", false, "moderator:manage:blocked_terms", null, 1, false, false, 23, 0, null, "", false, "moderator:manage:automod", null, 1, false, false, 24, 0, null, "", false, "moderator:read:automod_settings", null, 1, false, false, 25, 0, null, "", false, "moderator:manage:automod_settings", null, 1, false, false, 26, 0, null, "", false, "moderator:read:chat_settings", null, 1, false, false, 27, 0, null, "", false, "moderator:manage:chat_settings", null, 1, false, false, 28, 0, null, "", false, "user:edit", null, 1, false, false, 29, 0, null, "", false, "user:edit:follows", null, 1, false, false, 30, 0, null, "", false, "user:manage:blocked_users", null, 1, false, false, 31, 0, null, "", false, "user:read:blocked_users", null, 1, false, false, 32, 0, null, "", false, "user:read:broadcast", null, 1, false, false, 33, 0, null, "", false, "user:read:email", null, 1, false, false, 34, 0, null, "", false, "user:read:follows", null, 1, false, false, 35, 0, null, "", false, "user:read:subscriptions", null, 1, false, false, 36, 0, null, "", false ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 984.0
margin_bottom = 122.0

[node name="RequestAppTokenButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 20.0
text = "Request App Token"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateAppTokenButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 273.0
margin_bottom = 20.0
text = "Validate App Token"

[node name="RevokeAppTokenButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_right = 406.0
margin_bottom = 20.0
text = "Revoke App Token"

[node name="ResponseTable" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 984.0
margin_bottom = 560.0
focus_mode = 2
size_flags_vertical = 3
text = "status401messageinvalid access token"
selection_enabled = true
script = ExtResource( 2 )

[connection signal="update_expire_time" from="API" to="MarginContainer/VBoxContainer/TokenStatusHBoxContainer" method="_on_API_update_expire_time"]
[connection signal="update_response_table" from="API" to="MarginContainer/VBoxContainer/ResponseTable" method="_on_API_update_response_table"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/TokenStatusHBoxContainer/Timer" to="MarginContainer/VBoxContainer/TokenStatusHBoxContainer" method="_on_Timer_timeout"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/ClientIdHBoxContainer/ClientIdField" to="." method="_on_ClientIdField_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/ClientSecretHBoxContainer/ClientSecretField" to="." method="_on_ClientSecretField_text_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ClientSecretHBoxContainer/ShowSecretButton" to="." method="_on_ShowSecretButton_toggled"]
[connection signal="id_pressed" from="MarginContainer/VBoxContainer/ScopeSecretHBoxContainer/PopupMenu" to="MarginContainer/VBoxContainer/ScopeSecretHBoxContainer" method="_on_PopupMenu_id_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RequestAppTokenButton" to="." method="_on_RequestAppTokenButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ValidateAppTokenButton" to="." method="_on_ValidateAppTokenButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RevokeAppTokenButton" to="." method="_on_RevokeAppTokenButton_pressed"]
